# everyday_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  config.py  docker-compose-test-weather-dict.yaml  docker-compose-test-weather-redis.yaml  docker-compose-test.yaml  docker-compose.yaml  env_example  logger_config.json  makefile  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
config/: .env.test
src/: app.py  config.py
src/cache/: __init__.py  base_cache.py  dict_cache.py  redis_cache.py
src/parser/weather/: schemas.py  town_url.json  weather.py
src/vk_bot/: handlers.py  keyboard.py  vk_bot.py
tests/parser/weather/: test_weather.py
tests/parser/weather/html/: test_weather_moscow.html
