[tool.poetry]
name = "bot-tg"
version = "0.1.0"
description = ""
authors = ["allozo <allozo@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
pydantic = "^1.10.7"
vk-api = "^11.9.9"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
