[tool.poetry]
name = "bot-tg"
version = "0.1.0"
description = ""
authors = ["allozo <allozo@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
pydantic = "^1.10.7"
vk-api = "^11.9.9"
python-dotenv = "^1.0.0"
pytest = "^7.3.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
autoflake = "^2.0.2"
unify = "^0.5"
flake8 = "^6.0.0"
pylint = "^2.17.2"
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
types-setuptools = "^67.6.0.7"
pre-commit = "^3.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
